# Cardinal-semicolon

./: .gitignore  .vscode-ctags  CMakeLists.txt  KMOD_HMAC_Key.txt  LICENSE  README.md  SERV_HMAC_Key.txt  apscript.txt  devices.txt  loadscript.txt  servicescript.txt  tags  workspace.code-workspace
common/: CMakeLists.txt
common/inc/: assert.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdlib.h  stdlist.h  stdqueue.h  string.h  time.h  types.h
common/src/: list.c  memory.c  queue.c  stdlib.c  time.c
drivers/: CMakeLists.txt
drivers/ahci/: CMakeLists.txt
drivers/ahci/inc/: ahci.h
drivers/ahci/src/: ahci.c  main.c
drivers/btrfs/: CMakeLists.txt
drivers/btrfs/src/: main.c
drivers/ehci/: CMakeLists.txt
drivers/ehci/inc/: ehci.h
drivers/ehci/src/: main.c
drivers/hdaudio/: CMakeLists.txt
drivers/hdaudio/inc/: cmds.h  hdaudio.h  regs.h
drivers/hdaudio/src/: main.c  pwr.c
drivers/intel_gfx/: CMakeLists.txt
drivers/intel_gfx/inc/: devices.h  display.h  gmbus.h  gtt.h  hsw-regs.h
drivers/intel_gfx/src/: devices.c  display.c  gmbus.c  main.c
drivers/intel_wifi/: CMakeLists.txt
drivers/intel_wifi/inc/: constants.h  device_helpers.h  devices.h  firmware.h  fw_defs.h  if_iwmreg.h  iwl-csr.h  pwm.h
drivers/intel_wifi/src/: device_helpers.c  devices.c  firmware.c  main.c  pwm.c
drivers/lfb/: CMakeLists.txt
drivers/lfb/src/: main.c
drivers/ps2/: CMakeLists.txt
drivers/ps2/inc/: priv_ps2.h  ps2.h  ps2_keyboard.h  ps2_mouse.h  scanset.h
drivers/ps2/src/: main.c  ps2.c  ps2_keyboard.c  ps2_mouse.c
drivers/rtl8139/: CMakeLists.txt
drivers/rtl8139/inc/: registers.h  state.h
drivers/rtl8139/src/: driver.c  main.c
drivers/rtl8169/: CMakeLists.txt
drivers/rtl8169/inc/: registers.h  state.h
drivers/rtl8169/src/: driver.c  main.c
drivers/tarfs/: CMakeLists.txt
drivers/tarfs/src/: main.c
drivers/uhci/: CMakeLists.txt
drivers/uhci/inc/: uhci.h
drivers/uhci/src/: main.c
drivers/virtio/: CMakeLists.txt
drivers/virtio/common/: CMakeLists.txt
drivers/virtio/common/inc/: virtio.h
drivers/virtio/common/src/: virtio_main.c
drivers/virtio/gpu/: CMakeLists.txt
drivers/virtio/gpu/inc/: virtio_3d.h  virtio_gpu.h
drivers/virtio/gpu/src/: main.c  virtio_3d.c
drivers/virtio/net/: CMakeLists.txt
drivers/virtio/net/inc/: net.h
drivers/virtio/net/src/: main.c
kernel/: CMakeLists.txt
kernel/inc/: boot_information.h  bootstrap_alloc.h  dwarf.h  elf.h  initrd.h  load_script.h  symbol_db.h
kernel/inc/platform/x86_64/: flags.cmake
kernel/inc/platform/x86_64/pc/: flags.cmake  multiboot2.h
kernel/src/: bootstrap_alloc.c  elf.c  initrd.c  load_script.c  symbol_db.c
kernel/src/platform/x86_64/pc/: boot.S  main.c  multiboot2.c  trampoline.S
libs/crypto/: CMakeLists.txt  aes.c  aes.h  hmac.c  hmac.h  sha256.c  sha256.h
libs/jsmn/: CMakeLists.txt  jsmn.c
libs/kvs/: CMakeLists.txt  kvs.c  kvs.h
libs/miniz/: CMakeLists.txt  miniz.c  miniz.h
libs/module_lib/: CMakeLists.txt  module.c  module_def.h
libs/pci/: pci.h
libs/sqlite/: CMakeLists.txt  sqlite_hal.c
libs/syscalls/: cs_syscall.h  error.h  ipc.h  thread.h
libs/ubsan_handlers/: CMakeLists.txt  ubsan.c
mana/: CMakeLists.txt
mana/src/: main.c
modules/: CMakeLists.txt
modules/SysDebug/: CMakeLists.txt
modules/SysDebug/inc/: debug_log.h  font.h  serialio.h
modules/SysDebug/src/: debug_log.c  main.c
modules/SysDebug/src/platform/x86_64/pc/: serialio.c
modules/SysFP/: CMakeLists.txt
modules/SysFP/inc/: fpu.h
modules/SysFP/src/: main.c
modules/SysFP/src/platform/x86_64/: plat.c
modules/SysInterrupts/: CMakeLists.txt
modules/SysInterrupts/src/: main.c
modules/SysInterrupts/src/platform/x86_64/pc/: apic.c  gdt.c  idt.c  intr.c  ioapic.c
modules/SysMP/: CMakeLists.txt
modules/SysMP/inc/: platform_mp.h
modules/SysMP/src/: main.c
modules/SysMP/src/platform/x86_64/pc/: mp.c
modules/SysMemory/: CMakeLists.txt
modules/SysMemory/src/: allocator.c  main.c
modules/SysObj/: CMakeLists.txt
modules/SysObj/src/: main.c
modules/SysPhysicalMemory/: CMakeLists.txt
modules/SysPhysicalMemory/inc/: page_allocator.h
modules/SysPhysicalMemory/src/: main.c  page_allocator.c
modules/SysReg/: CMakeLists.txt
modules/SysReg/inc/: common.h  priv_reg.h
modules/SysReg/inc/acpi/: acpi_tables.h  fadt.h  hpet.h  madt.h  mcfg.h
modules/SysReg/src/: bootinfo.c  main.c  pci.c
modules/SysReg/src/acpi/: acpi_tables.c
modules/SysReg/src/platform/x86_64/pc/: cpuid.c  hw_info.c
modules/SysTaskMgr/: CMakeLists.txt
modules/SysTaskMgr/inc/: elf.h  task_priv.h
modules/SysTaskMgr/src/: task.c  user_elf_loader.c
modules/SysTerminal/: CMakeLists.txt
modules/SysTerminal/inc/: terminal_priv.h
modules/SysTerminal/src/: main.c
modules/SysTimer/: CMakeLists.txt
modules/SysTimer/inc/: timer.h
modules/SysTimer/src/: main.c
modules/SysTimer/src/platform/x86_64/pc/: apic.c  hpet.c  pit.c  plat.c  priv_timers.h  rtc.c  tsc.c
modules/SysUser/: CMakeLists.txt
modules/SysUser/inc/: plat_defs.h
modules/SysUser/src/: main.c
modules/SysUser/src/platform/x86_64/: syscall.c
modules/SysVirtualMemory/: CMakeLists.txt
modules/SysVirtualMemory/src/: main.c
modules/SysVirtualMemory/src/platform/x86_64/pc/: vmem.c
modules/inc/: global_flags.h
modules/inc/SysDebug/: debug.h
modules/inc/SysFP/: fp.h
modules/inc/SysInterrupts/: interrupts.h
modules/inc/SysMP/: mp.h
modules/inc/SysMemory/: memory.h
modules/inc/SysObj/: obj.h
modules/inc/SysPhysicalMemory/: phys_mem.h
modules/inc/SysReg/: registry.h
modules/inc/SysTaskMgr/: task.h
modules/inc/SysTimer/: timer.h
modules/inc/SysUser/: syscall.h
modules/inc/SysVirtualMemory/: vmem.h
notes/: Cardinal; Design Notes.txt  Microkernel philosophy and implications.md  SysTerminal.md  User Executable Format.md  testing_scheme.md
scripts/: setup_env.sh
servers/: CMakeLists.txt
servers/CoreInput/: CMakeLists.txt
servers/CoreInput/inc/: input.h
servers/CoreInput/src/: main.c
utils/: CMakeLists.txt
utils/sign_exec/: CMakeLists.txt
utils/sign_exec/src/: main.c
(+56 files in other folders)
