CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ps2)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/rtl8139)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/intel_wifi)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/intel_gfx)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/virtio)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lfb)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/hdaudio)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ahci)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/uhci)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/tarfs)