CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FILE(GLOB COMMON_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/src/crypto/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/src/elf/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/src/linear_alloc/*.c")
SET(COMMON_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/inc")


ADD_EXECUTABLE(kernel.bin "${PLATFORM_SRCS}" "${ISA_SRCS}" "${COMMON_SRCS}")
SET_TARGET_PROPERTIES(kernel.bin PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(kernel.bin PROPERTIES LINK_FLAGS "-Wl,--script=${PLATFORM_LAYOUT} -Wl,--omagic ${ISA_LINKER_FLAGS} ${PLATFORM_LINKER_FLAGS}")
TARGET_INCLUDE_DIRECTORIES(kernel.bin PUBLIC "${ISA_INCLUDE_DIRS}" "${PLATFORM_INCLUDE_DIRS}" "${COMMON_INCLUDE_DIRS}")
