CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SysReg)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SysDebug)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SysPhysicalMemory)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SysVirtualMemory)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SysMemory)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SysInterrupts)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SysTimer)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SysUser)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SysMP)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SysFP)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SysTerminal)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SysTaskMgr)