CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(LIBS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../libs")

#Build libs 
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/../libs/crypto" ${CMAKE_CURRENT_BINARY_DIR}/crypto)
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/../libs/miniz" ${CMAKE_CURRENT_BINARY_DIR}/miniz)
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/../libs/module_lib" ${CMAKE_CURRENT_BINARY_DIR}/module_lib)
 
#Build utils
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/sign_exec")
