CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FILE(GLOB SYSREG_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)

ADD_EXECUTABLE(SysReg.elf "${SYSREG_SRCS}")

ADD_CUSTOM_TARGET(SysReg.celf ALL
    DEPENDS SysReg.elf
    COMMAND ${CELF_GEN} Cardinal_SysReg Himanshu Goel 0000 0000 00 SysReg.elf -o SysReg.celf
)
SET_TARGET_PROPERTIES(SysReg.elf PROPERTIES LINK_FLAGS "-r ${ISA_LINKER_FLAGS} ${PLATFORM_LINKER_FLAGS}")