CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CELF_NAME SysReg)

FILE(GLOB SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)
FILE(GLOB ACPI_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/acpi/*.c)
FILE(GLOB ISA_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/platform/${CUR_ISA}/*.c)
FILE(GLOB PLATFORM_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/platform/${CUR_ISA}/${CUR_PLATFORM}/*.c)

ADD_EXECUTABLE(${CELF_NAME}.elf "${SRCS}" "${ACPI_SRCS}" "${ISA_SRCS}" "${PLATFORM_SRCS}")

ADD_CUSTOM_TARGET(${CELF_NAME}.celf ALL
    DEPENDS ${CELF_NAME}.elf
    COMMAND ${CELF_GEN} Cardinal_${CELF_NAME} Himanshu Goel 0000 0000 ${KMOD_HMAC_Key} ${CELF_NAME}.elf -o ${CELF_NAME}.celf
    COMMAND mkdir -p ${PLATFORM_CELF_DIR}
    COMMAND cp -t ${PLATFORM_CELF_DIR} ${CELF_NAME}.celf
)

TARGET_LINK_LIBRARIES(${CELF_NAME}.elf PRIVATE kvs)
TARGET_INCLUDE_DIRECTORIES(${CELF_NAME}.elf PRIVATE "inc" "../inc/${CELF_NAME}" "../inc" "../../kernel/inc" "${LIBS_DIR}/kvs")
TARGET_INCLUDE_DIRECTORIES(${CELF_NAME}.elf SYSTEM PUBLIC "${KERN_STDLIB_INCLUDE_DIR}")
SET_TARGET_PROPERTIES(${CELF_NAME}.elf PROPERTIES LINK_FLAGS "-r ${ISA_LINKER_FLAGS} ${PLATFORM_LINKER_FLAGS}")